Bug 57032:UI : General : For discussion: mark as read button is too big in case open any request from mailbox "before caliming"

--- a/src/app/shared/components/e-service-wrapper-buttons/e-service-wrapper-buttons.component.scss
+++ b/src/app/shared/components/e-service-wrapper-buttons/e-service-wrapper-buttons.component.scss
@@ -13,6 +13,7 @@ $group4ActiveBorder: #B1D5E3; // 40%
 .action-button {
   &:not(.dropdown-item) {
     color: #ffffff;
+    max-width: 15rem;
   }
 
   .action-info {
